# quoridor-ai

./: .gitignore  CMakeLists.txt  README.md  check.txt  compile.sh  connect.sh  full_game.hpp  game.hpp  greedy  greedy.cpp  in.txt  interactive.cpp  interactive_test.cpp  judge.cpp  judge.sh  main.cpp  main0  main10  main15  main18  main18_2  main19  main19_2  main19_3  main20  main22  main23  main24  main25  main5  make.sh  negaalpha.hpp  negascout.cpp  negascout_fast.cpp  nimgame.hpp  quoridor.hpp  quoridor_fast.hpp  run.sh  tar.sh  tcp_pipe.cpp  (+4 more)
old/: main  main0  main10  main15  main18  main20  main25  main5
