cmake_minimum_required(VERSION 3.05)
project(quiridor)

set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -march=native)
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -D_GLIBCXX_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -DNDEBUG -DNOVERBOSE")
add_executable(negascout negascout.cpp)
add_executable(negascout-deterministic negascout.cpp)
target_compile_definitions(negascout-deterministic PRIVATE -DNORANDOM)
add_executable(interactive interactive.cpp)
add_executable(interactive-test interactive_test.cpp)
add_executable(judge judge.cpp)
add_executable(negascout-fast negascout_fast.cpp)
add_executable(negascout-fast-deterministic negascout_fast.cpp)
target_compile_definitions(negascout-fast-deterministic PRIVATE -DNORANDOM)
